PlusMinus/PlusMinus/wwwroot/css/site.css
﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */
*{
    font-family: "Century Gothic", sans-serif;
}

a.navbar-brand {
white-space: normal;
text-align: center;
word-break: break-all;
}

/* Provide sufficient contrast against white background */
a {
color: #0366d6;
}

.btn-primary {
color: #fff;
background-color: #1b6ec2;
border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
color: #fff;
background-color: #1b6ec2;
border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
font-size: 14px;
}
@media (min-width: 768px) {
html {
  font-size: 16px;
}
}

.border-top {
border-top: 1px solid #e5e5e5;
}

.border-bottom {
border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
font-size: 1rem;
line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
position: relative;
min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
  background-color: #f1f4eb;
}
.footer {
    position: absolute;
    /*bottom: 0;*/
    width: 100%;
    white-space: nowrap;
    line-height: 30px; /* Vertically center the text there */
    background-color: #D5D7D1;
    text-decoration: none;
    padding-top: 20px;
}

header a
{
    color: #fff;
    text-decoration: none;
}

header a:hover
{
    cursor: pointer;
    color: #fff;
    text-decoration: none;
}

header .menu
{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100vw;
    background-color: #30587b;
    color: #fff;
    padding: 20px;
    /* margin-bottom: 20px; */
}

header .left-upper-menu
{
    width:  30vw;
}
header .right-upper-menu
{
    width: 30vw;
}

header .right-upper-menu li
{
    display: flex;
    justify-content: space-between;
    align-content: center
}

header .menu-down
{
    justify-content: space-around;
    align-items: center;
    width: 100vw;
    height: 60px;
    background-color: #458eae;
    color: #fff;
    padding-top: 20px;
}

header .menu ul li
{
    display: inline;
}

header .menu-down ul li
{
    display: inline;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 5%;
}

footer .container
{
    display: flex;
    justify-content: space-between;
    width: 100vw;
    color: #22231d;
    padding: 20px;
    text-align: center;
}
footer .container b
{
    text-decoration: underline;
}

footer .container a
{
    text-decoration: none;
    color: #22231d;
}

footer .container .container-left
{
    width: 32vw;
    border-right: 1px solid #22231d;
}

footer .container .container-middle
{
    width: 32vw;
    border-right: 1px solid #22231d;
    margin: auto;
}

footer .container .container-right
{
    width: 32vw;
    /* border-left: ; */
}

footer ul li
{
    list-style: none;
    margin: 0;
}

/* Login panel styles
-------------------------------------------------- */

.login-panel{
    text-align: center;
    width: 24vw;
    height: 54vh;
    margin-left: 17vw;
    margin-top: 3vh;
    padding-top: 3vh;
    background-color: white;
    border: 1px solid black;
}

.login-form{
    margin-top: 4vh;
    text-align: left;
    padding-left: 3vw;
}

.login-email{
    width: 18vw;
    margin-bottom: 2vh;
}

.login-password{
    width: 18vw;
    margin-bottom: 6vh;
}

.login-enter{
    width: 18vw;
    background-color: #458eae;
    border: 0px;
    border-radius: 4px;
    color: white;
    padding: 0.8vh;
    margin-bottom: 1vh;
    font-weight: bold;
}

.login-google{
    width: 18vw;
    background-color: red;
    border: 0px;
    border-radius: 4px;
    color: white;
    padding: 0.8vh;
    margin-bottom: 1vh;
    font-weight: bold;
}

.login-reg{
    color: red;
    text-decoration: underline;
    font-weight: bold;
}

/* Registration panel styles
-------------------------------------------------- */

.reg-panel{
    text-align: center;
    width: 24vw;
    height: 70vh;
    margin-left: 17vw;
    margin-top: 3vh;
    padding-top: 3vh;
    background-color: white;
    border: 1px solid black;
}

.reg-form{
    text-align: left;
    padding-left: 3vw;
}

.reg-input{
    width: 18vw;
    margin-bottom: 2vh;
}

.reg-button{
    width: 18vw;
    background-color: #458eae;
    border: 0px;
    border-radius: 4px;
    color: white;
    padding: 0.8vh;
    margin-top: 1vh;
    font-weight: bold;
}

